imported external libraries

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Intro section with dropdown navigation</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
   <header class="l-header">
     <nav>
       <a href="/"><img src="./images/logo.svg" alt="Logo Snap"></a>
-      
+
       <ul class="c-menu">
         <li>
           <a href="#">Features</a>
@@ -60,13 +64,13 @@
       <li><a href="#">Register</a></li>
     </ul>
   </header>
-  
+
   <main>
     <!-- Make remote work
-  
-    Get your team in sync, no matter your location. Streamline processes, 
+
+    Get your team in sync, no matter your location. Streamline processes,
     create team rituals, and watch productivity soar.
-  
+
     Learn more -->
   </main>
 
