--- a/index.html
+++ b/index.html
@@ -13,56 +13,66 @@
 </head>
 <body>
   <header class="l-header">
-    <nav>
+    <nav class="c-navbar">
       <a href="/"><img src="./images/logo.svg" alt="Logo Snap"></a>
 
       <ul class="c-menu">
-        <li>
+        <li class="c-menu__item dropdown">
           <a href="#">Features</a>
-          <ul class="c-dropdow__menu">
+          <ul class="c-dropdown__menu right">
             <li>
-              <a href="#">
+              <a class="c-menu__link" href="#">
                 <img src="./images/icon-todo.svg" alt="" aria-hidden="true">
                 Todo List
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="c-menu__link" href="#">
                 <img src="./images/icon-calendar.svg" alt="" aria-hidden="true">
                 Calendar
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="c-menu__link" href="#">
                 <img src="./images/icon-reminders.svg" alt="" aria-hidden="true">
                 Reminders
               </a>
             </li>
             <li>
-              <a href="#">
+              <a class="c-menu__link" href="#">
                 <img src="./images/icon-planning.svg" alt="" aria-hidden="true">
                 Planning
               </a>
             </li>
           </ul>
         </li>
-        <li>
+        <li class="c-menu__item dropdown">
           <a href="#">Company</a>
-          <ul class="c-dropdow__menu">
-            <li><a href="#">History</a></li>
-            <li><a href="#">Our Team</a></li>
-            <li><a href="#">Blog</a></li>
+          <ul class="c-dropdown__menu left">
+            <li>
+              <a class="c-menu__link" href="#">History</a>
+            </li>
+            <li>
+              <a class="c-menu__link" href="#">Our Team</a>
+            </li>
+            <li>
+              <a class="c-menu__link" href="#">Blog</a>
+            </li>
           </ul>
         </li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">About</a></li>
+        <li class="c-menu__item">
+          <a href="#">Careers</a>
+        </li>
+        <li class="c-menu__item">
+          <a href="#">About</a>
+        </li>
+      </ul>
+      
+      <ul class="c-auth__area">
+        <li><a href="#">Login</a></li>
+        <li><a href="#">Register</a></li>
       </ul>
     </nav>
-
-    <ul class="c-auth__area">
-      <li><a href="#">Login</a></li>
-      <li><a href="#">Register</a></li>
-    </ul>
   </header>
 
   <main>
