created content component

--- a/index.html
+++ b/index.html
@@ -76,13 +76,16 @@
     </nav>
   </header>
 
-  <main>
-    <!-- Make remote work
-
-    Get your team in sync, no matter your location. Streamline processes,
-    create team rituals, and watch productivity soar.
-
-    Learn more -->
+  <main class="l-main">
+    <div class="c-content">
+      <h1 class="c-content--title">Make remote work</h1>
+      <p class="c-content--description">
+        Get your team in sync, no matter your location. Streamline processes,
+        create team rituals, and watch productivity soar.
+      </p>
+      <button class="c-content--more">Learn more</button>
+    </div>
+    <div class="c-image__wrap"></div>
   </main>
 
   <!-- MOBILE MENU -->
