added employees footer

--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
         create team rituals, and watch productivity soar.
       </p>
       <button class="c-content--more">Learn more</button>
+
+      <ul class="c-content__colab">
+        <li class="c-content__colab--item">
+          <img src="./images/client-databiz.svg" alt="logo databiz">
+        </li>
+        <li class="c-content__colab--item">
+          <img src="./images/client-audiophile.svg" alt="logo audiophile">
+        </li>
+        <li class="c-content__colab--item">
+          <img src="./images/client-meet.svg" alt="logo meet">
+        </li>
+        <li class="c-content__colab--item">
+          <img src="./images/client-maker.svg" alt="logo marker">
+        </li>
+      </ul>
     </div>
     <div class="c-image__wrap"></div>
   </main>
