--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul class="c-menu">
         <li class="c-menu__item dropdown">
           <a href="#">Features</a>
-          <ul class="c-dropdown__menu right">
+          <ul class="c-dropdown__main right">
             <li>
               <a class="c-menu__link" href="#">
                 <img src="./images/icon-todo.svg" alt="" aria-hidden="true">
@@ -49,7 +49,7 @@
         </li>
         <li class="c-menu__item dropdown">
           <a href="#">Company</a>
-          <ul class="c-dropdown__menu left">
+          <ul class="c-dropdown__main left">
             <li>
               <a class="c-menu__link" href="#">History</a>
             </li>
