accordion effect in mobile menu

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <!-- MOBILE MENU -->
   <ul class="c-dropdown__menu hidden">
     <li class="c-dropdown__menu--item">
-      <a href="#">Features</a>
+      <a class="c-dropdown__menu--link" href="#">Features</a>
       <ul class="c-dropdown__submenu">
         <li class="c-dropdown__submenu--item">
           <a class="c-dropdown__submenu--link" href="#">
@@ -135,7 +135,7 @@
       </ul>
     </li>
     <li class="c-dropdown__menu--item">
-      <a href="#">Company</a>
+      <a class="c-dropdown__menu--link" href="#">Company</a>
       <ul class="c-dropdown__submenu">
         <li class="c-dropdown__submenu--item">
           <a class="c-dropdown__submenu--link" href="#">History</a>
