--- a/index.html
+++ b/index.html
@@ -104,58 +104,60 @@
   </main>
 
   <!-- MOBILE MENU -->
-  <ul class="c-dropdown__menu hidden">
-    <li class="c-dropdown__menu--item">
-      <a class="c-dropdown__menu--link" href="#">Features</a>
-      <ul class="c-dropdown__submenu">
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">
-            <img src="./images/icon-todo.svg" alt="" aria-hidden="true">
-            Todo List
-          </a>
-        </li>
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">
-            <img src="./images/icon-calendar.svg" alt="" aria-hidden="true">
-            Calendar
-          </a>
-        </li>
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">
-            <img src="./images/icon-reminders.svg" alt="" aria-hidden="true">
-            Reminders
-          </a>
-        </li>
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">
-            <img src="./images/icon-planning.svg" alt="" aria-hidden="true">
-            Planning
-          </a>
-        </li>
-      </ul>
-    </li>
-    <li class="c-dropdown__menu--item">
-      <a class="c-dropdown__menu--link" href="#">Company</a>
-      <ul class="c-dropdown__submenu">
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">History</a>
-        </li>
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">Our Team</a>
-        </li>
-        <li class="c-dropdown__submenu--item">
-          <a class="c-dropdown__submenu--link" href="#">Blog</a>
-        </li>
-      </ul>
-    </li>
-    <li class="c-dropdown__menu--item">
-      <a class="c-dropdown__menu--link" href="#">Careers</a>
-    </li>
-    <li class="c-dropdown__menu--item">
-      <a class="c-dropdown__menu--link" href="#">About</a>
-    </li>
-  </ul>
-  <div class="c-overlay hidden"></div>
+  <div class="mobile__menu">
+    <ul class="c-dropdown__menu hidden">
+      <li class="c-dropdown__menu--item">
+        <a class="c-dropdown__menu--link" href="#">Features</a>
+        <ul class="c-dropdown__submenu">
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">
+              <img src="./images/icon-todo.svg" alt="" aria-hidden="true">
+              Todo List
+            </a>
+          </li>
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">
+              <img src="./images/icon-calendar.svg" alt="" aria-hidden="true">
+              Calendar
+            </a>
+          </li>
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">
+              <img src="./images/icon-reminders.svg" alt="" aria-hidden="true">
+              Reminders
+            </a>
+          </li>
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">
+              <img src="./images/icon-planning.svg" alt="" aria-hidden="true">
+              Planning
+            </a>
+          </li>
+        </ul>
+      </li>
+      <li class="c-dropdown__menu--item">
+        <a class="c-dropdown__menu--link" href="#">Company</a>
+        <ul class="c-dropdown__submenu">
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">History</a>
+          </li>
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">Our Team</a>
+          </li>
+          <li class="c-dropdown__submenu--item">
+            <a class="c-dropdown__submenu--link" href="#">Blog</a>
+          </li>
+        </ul>
+      </li>
+      <li class="c-dropdown__menu--item">
+        <a class="c-dropdown__menu--link" href="#">Careers</a>
+      </li>
+      <li class="c-dropdown__menu--item">
+        <a class="c-dropdown__menu--link" href="#">About</a>
+      </li>
+    </ul>
+    <div class="c-overlay hidden"></div>
+  </div>
 
   <script src="./script.js"></script>
 </body>
