--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="c-menu__btn" aria-label="Open menu"></button>
         <ul class="c-menu">
           <li class="c-menu__item">
-            <a class="c-menu__link" href="#">Features</a>
+            <a class="c-menu__link c-menu__link__arrow" href="#">Features</a>
             <ul class="c-menu__submenu c-menu__submenu--left">
               <li class="c-menu__submenu__item">
                 <a class="c-menu__link" href="#">
@@ -80,7 +80,7 @@
           </li>
 
           <li class="c-menu__item">
-            <a class="c-menu__link" href="#">Company</a>
+            <a class="c-menu__link c-menu__link__arrow" href="#">Company</a>
             <ul class="c-menu__submenu">
               <li class="c-menu__submenu__item">
                 <a class="c-menu__link" href="#">History</a>
